// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`program download 1`] = `
Array [
  Object {
    "name": ".gitignore",
    "path": ".gitignore",
    "size": 20,
    "type": "file",
  },
  Object {
    "name": "TUTORIAL.md",
    "path": "TUTORIAL.md",
    "size": 120,
    "type": "file",
  },
  Object {
    "name": "spec.yml",
    "path": "spec.yml",
    "size": 74,
    "type": "file",
  },
  Object {
    "name": "Makefile",
    "path": "exercises/start/Makefile",
    "size": 23,
    "type": "file",
  },
  Object {
    "name": "README.md",
    "path": "exercises/start/README.md",
    "size": 402,
    "type": "file",
  },
  Object {
    "name": "Gemfile",
    "path": "exercises/fundamentals/Gemfile",
    "size": 70,
    "type": "file",
  },
  Object {
    "name": "Makefile",
    "path": "exercises/fundamentals/Makefile",
    "size": 31,
    "type": "file",
  },
  Object {
    "name": "README.md",
    "path": "exercises/fundamentals/README.md",
    "size": 185,
    "type": "file",
  },
  Object {
    "name": "Rakefile",
    "path": "exercises/fundamentals/Rakefile",
    "size": 205,
    "type": "file",
  },
  Object {
    "name": "fundamentals.gemspec",
    "path": "exercises/fundamentals/fundamentals.gemspec",
    "size": 217,
    "type": "file",
  },
  Object {
    "name": "reverse_test.rb",
    "path": "exercises/fundamentals/test/reverse_test.rb",
    "size": 214,
    "type": "file",
  },
  Object {
    "name": "sum_of_primes_test.rb",
    "path": "exercises/fundamentals/test/sum_of_primes_test.rb",
    "size": 284,
    "type": "file",
  },
  Object {
    "name": "test_helper.rb",
    "path": "exercises/fundamentals/test/test_helper.rb",
    "size": 58,
    "type": "file",
  },
  Object {
    "name": "reverse.rb",
    "path": "exercises/fundamentals/lib/reverse.rb",
    "size": 92,
    "type": "file",
  },
  Object {
    "name": "sum_of_primes.rb",
    "path": "exercises/fundamentals/lib/sum_of_primes.rb",
    "size": 96,
    "type": "file",
  },
  Object {
    "name": "Gemfile",
    "path": "exercises/blocks/Gemfile",
    "size": 70,
    "type": "file",
  },
  Object {
    "name": "Makefile",
    "path": "exercises/blocks/Makefile",
    "size": 57,
    "type": "file",
  },
  Object {
    "name": "README.md",
    "path": "exercises/blocks/README.md",
    "size": 92,
    "type": "file",
  },
  Object {
    "name": "Rakefile",
    "path": "exercises/blocks/Rakefile",
    "size": 205,
    "type": "file",
  },
  Object {
    "name": "blocks.gemspec",
    "path": "exercises/blocks/blocks.gemspec",
    "size": 211,
    "type": "file",
  },
  Object {
    "name": "test_helper.rb",
    "path": "exercises/blocks/test/test_helper.rb",
    "size": 58,
    "type": "file",
  },
  Object {
    "name": "with_numbers_test.rb",
    "path": "exercises/blocks/test/with_numbers_test.rb",
    "size": 322,
    "type": "file",
  },
  Object {
    "name": "with_numbers.rb",
    "path": "exercises/blocks/lib/with_numbers.rb",
    "size": 46,
    "type": "file",
  },
]
`;

exports[`program download 2`] = `
Array [
  Object {
    "name": ".config.json",
    "path": ".config.json",
    "size": 3,
    "type": "file",
  },
  Object {
    "name": ".gitignore",
    "path": "ruby/.gitignore",
    "size": 20,
    "type": "file",
  },
  Object {
    "name": "Gemfile",
    "path": "ruby/exercises/fundamentals/Gemfile",
    "size": 70,
    "type": "file",
  },
  Object {
    "name": "Makefile",
    "path": "ruby/exercises/fundamentals/Makefile",
    "size": 31,
    "type": "file",
  },
  Object {
    "name": "README.md",
    "path": "ruby/exercises/fundamentals/README.md",
    "size": 185,
    "type": "file",
  },
  Object {
    "name": "Rakefile",
    "path": "ruby/exercises/fundamentals/Rakefile",
    "size": 205,
    "type": "file",
  },
  Object {
    "name": "fundamentals.gemspec",
    "path": "ruby/exercises/fundamentals/fundamentals.gemspec",
    "size": 217,
    "type": "file",
  },
  Object {
    "name": "reverse_test.rb",
    "path": "ruby/exercises/fundamentals/test/reverse_test.rb",
    "size": 214,
    "type": "file",
  },
  Object {
    "name": "sum_of_primes_test.rb",
    "path": "ruby/exercises/fundamentals/test/sum_of_primes_test.rb",
    "size": 284,
    "type": "file",
  },
  Object {
    "name": "test_helper.rb",
    "path": "ruby/exercises/fundamentals/test/test_helper.rb",
    "size": 58,
    "type": "file",
  },
  Object {
    "name": "reverse.rb",
    "path": "ruby/exercises/fundamentals/lib/reverse.rb",
    "size": 92,
    "type": "file",
  },
  Object {
    "name": "sum_of_primes.rb",
    "path": "ruby/exercises/fundamentals/lib/sum_of_primes.rb",
    "size": 96,
    "type": "file",
  },
]
`;
